2012-03-23  Tony Chang  <tony@chromium.org>

        [chromium] rename newwtf target back to wtf
        https://bugs.webkit.org/show_bug.cgi?id=82064

        Reviewed by Adam Barth.

        * Platform.gyp/Platform.gyp:

2012-03-22  Tony Chang  <tony@chromium.org>

        Unreviewed, fix chromium build after wtf move.

        Only use newwtf, remove references to wtf.

        * Platform.gyp/Platform.gyp:

2012-03-21  Ryosuke Niwa  <rniwa@webkit.org>

        Touch a file to make Chromium Windows bots happy.

        * chromium/public/WebGraphicsContext3D.h:

2012-03-21  David Reveman  <reveman@chromium.org>

        [Chromium] GL_EXT_occlusion_query_boolean and GL_CHROMIUM_command_buffer_query support.
        https://bugs.webkit.org/show_bug.cgi?id=80988

        Reviewed by Adrienne Walker.

        Add EXT_occlusion_query API to WebGraphicsContext3D.

        * chromium/public/WebGraphicsContext3D.h:
        (WebGraphicsContext3D):
        (WebKit::WebGraphicsContext3D::createQueryEXT):
        (WebKit::WebGraphicsContext3D::deleteQueryEXT):
        (WebKit::WebGraphicsContext3D::isQueryEXT):
        (WebKit::WebGraphicsContext3D::beginQueryEXT):
        (WebKit::WebGraphicsContext3D::endQueryEXT):
        (WebKit::WebGraphicsContext3D::getQueryivEXT):
        (WebKit::WebGraphicsContext3D::getQueryObjectuivEXT):

2012-03-19  Michal Mocny  <mmocny@google.com>

        [chromium] Adding support for GL_EXT_discard_framebuffer.
        https://bugs.webkit.org/show_bug.cgi?id=81383

        Reviewed by James Robinson.

        * chromium/public/WebGraphicsContext3D.h:
        (WebGraphicsContext3D):
        (WebKit::WebGraphicsContext3D::discardFramebufferEXT):
        (WebKit::WebGraphicsContext3D::ensureFramebufferCHROMIUM):

2012-03-19  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r111207.
        http://trac.webkit.org/changeset/111207
        https://bugs.webkit.org/show_bug.cgi?id=81561
