@@ -1,3 +1,14 @@
+2012-03-25  Nat Duca  <nduca@chromium.org>
+
+        [chromium] Route willBeginFrame from compositor to WebWidget
+        https://bugs.webkit.org/show_bug.cgi?id=82171
+
+        Reviewed by Darin Fisher.
+
+        * chromium/public/WebLayerTreeViewClient.h:
+        (WebLayerTreeViewClient):
+        (WebKit::WebLayerTreeViewClient::willBeginFrame):
+
 2012-03-23  Tony Chang  <tony@chromium.org>
 
         [chromium] rename newwtf target back to wtf
